feat: 선택 장소 기반 빔서치 코스 생성 적용